--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-        rel="stylesheet">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            
+        }
+    </style>
     <title>Bootstrap Demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -17,7 +18,7 @@
     <h1 style="color: rgb(255, 231, 93); background-color: rgba(58, 223, 8, 0.906); text-align: center;">EDU TRIP BADUY YAKESMA KOTA TANGERANG</h1>
     
     <section style="background-image: url(Images/Artboard_2.png); background-repeat: no-repeat; background-size: cover; background-position: center;">
-        <h3 style="font-size: medium; font: caption; text-align: center; border: 3px solid rgb(7, 208, 7); border-radius: 10px; border-width:4px ; background-color:rgb(251, 251, 37) ;">
+        <h3 style="font-size: medium; font: caption; text-align: center; border: 3px solid rgb(7, 208, 7); border-radius: 7px; border-width:4px ; background-color:rgb(251, 251, 37) ;">
             Selamat datang Calon Volunteer di Event EDU TRIP Kampung Baduy Mualaf</h3>
    
 
@@ -40,8 +41,7 @@
         </div>
 <!-- KOLOM TEKS -->
         <div class="col-md-6">
-            <p style="border: 10px outset; background-color: azure; text-align: justify;">Halo semuanya para calon Volunteer EDU TRIP YAKESMA TNG GOES TO BADUY, Berikut adalah tata cara mendaftarkan diri Jalur Fully Funded.</p>
-            <p></p>
+            <p style="border: 10px outset; background-color: azure; text-align: justify; font-weight: 400; ">HALO SEMUANYA</p> 
         </div>
       </div>
       </div>
