--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
 <!-- KOLOM KARTU -->
         <div class="col-md-6">
-            <div class="card" style="width: 8cm; text-align: left; margin-left: 50px">
+            <div class="card" style="width: 8cm; text-align: left; margin-left: 50px;">
             <img src="Images/Yakesma ETB.jpg" class="card-img-top" alt="">
                 <div class="card-body">
                 <h5 class="card-title">EDU TRIP KAMPUNG BADUI MUALAF bersama KAK EWA</h5>
