--- a/index.html
+++ b/index.html
@@ -14,32 +14,44 @@
 <body>
     <h1 style="color: rgb(255, 255, 255); background-color: rgba(58, 223, 8, 0.906); text-align: center;">EDU TRIP BADUY YAKESMA KOTA TANGERANG</h1>
     
-    <section style="background-image: url(Images/Artboard_2.png); background-repeat: no-repeat; background-size: cover; background-position: center;">
-        <h3 style="font-size: medium; font: caption; text-align: center; border: 3px solid rgb(7, 208, 7); border-radius: 7px; border-width:4px ; background-color:rgb(251, 251, 37) ;">
-            Selamat datang Calon Volunteer di Event EDU TRIP Kampung Baduy Mualaf</h3>
+    <section style="background-image: url(Images/logo_opacity.png); background-repeat: no-repeat; background-size: cover; background-position: center;">
+        <h3 style="font-size: medium; font-weight:600 ;text-align: center; border: 3px solid rgb(7, 208, 7); border-radius: 7px; border-width:4px ; background-color:rgb(251, 251, 37) ;">
+            Selamat Datang Calon Volunteer di Event EDU TRIP Kampung Baduy Mualaf</h3>
    
 
     <div class="container mt-5">
         <div class="row">
 
-    
 <!-- KOLOM KARTU -->
         <div class="col-md-6">
             <div class="card" style="width: 8cm; text-align: left; margin-left: 50px;">
             <img src="Images/Yakesma ETB.jpg" class="card-img-top" alt="">
-                <div class="card-body">
-                <h5 class="card-title">EDU TRIP KAMPUNG BADUI MUALAF bersama KAK EWA</h5>
-                <p class="card-text">Berikut adalah sekilas informasi tentang EDU TRIP KAMPUNG BADUY MUALAF bersama Kak
-                    Ewa</p>
+                <div class="card-body" style="">
+                <h4 class="card-title" style="font-weight: 650;">EDU TRIP KE KAMPUNG BADUY MUALAF bersama KAK EWA</h4>
+                <p class="card-text" style="font:caption;"> AYO GABUNG DI EVENT EDU TRIP KAMPUNG BADUY MUALAF</p>
                 <a href="https://www.instagram.com/p/C-HvY_lS5GS/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
-                    class="btn btn-primary" style="background-color: rgb(7, 208, 7);">Informasi lebih lanjut...</a>
+                    class="btn btn-primary" style="background-color: rgb(7, 208, 7);">DAFTAR SEKARANG</a>
                   </div>
             </div>
         </div>
+        <br>
 <!-- KOLOM TEKS -->
-        <div class="col-md-6">
-            <p style="border: 10px outset; background-color: azure; text-align: justify; font-weight: 400; ">HALO SEMUANYA</p> 
+        <section class="col-md-6">
+            <h5 style="text-align: justify; font-weight: 800; margin-right: 55px; color: gold; font-size: xx-large; border: 25px ; background-color: rgba(200, 189, 189, 0.1); position: relative; display: inline-block; pointer-events: none;">HALO SEMUANYA</h5> 
+            <br>
+        <div>
+            <p style="text-align: justify; margin-top: 15px;">Assalamualaikum</p>
         </div>
+<!-- KOLOM LINK -->
+        <div>
+            <a href="https://www.yakesmatng.id/p/relawan-yakesma.html" class="btn btn-primary" style="background-color: black; margin-bottom: 5px;">Link Pendaftaran Fully Funded</a> 
+            <br>
+         <div>
+            <a href="https://api.whatsapp.com/send/?phone=6281111920101&text&type=phone_number&app_absent=0" class="btn btn-primary" style="background-color: yellow; margin-top: 5px; color: black"> Nomor Whatsapp Konfirmasi</a>
+            <br>
+         </div>
+        </div>
+        </section>
       </div>
       </div>
     </section>
