--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <!-- KOLOM KARTU -->
         <div class="col-md-6">
-            <div class="card" style="width: 8cm; text-align: left; margin-left: 25px;">
+            <div class="card" style="width: 8cm; text-align: left; margin-left: 25px; position: relative;">
             <img src="Images/Yakesma ETB.jpg" class="card-img-top" alt="">
                 <div class="card-body" style="">
                 <h4 class="card-title" style="font-weight: 650;">EDU TRIP KE KAMPUNG BADUY MUALAF bersama KAK EWA</h4>
