--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <div class="row">
 
 <!-- KOLOM KARTU -->
-        <div class="col-md-6">
-            <div class="card" style="width: 8cm; text-align: center; position: relative; margin-right: 20px;">
+        <div class="col-md-6" style="padding-top: 10px;">
+            <div class="card" style="width: 8cm; text-align: center; position: relative; margin-left: 22px;">
             <img src="Images/Yakesma ETB.jpg" class="card-img-top" alt="">
                 <div class="card-body" style="">
                 <h4 class="card-title" style="font-weight: 650;">EDU TRIP KE KAMPUNG BADUY MUALAF bersama KAK EWA</h4>
