--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <div class="row">
 
 <!-- KOLOM KARTU -->
-        <div class="col-md-6" style="padding-top: 10px;">
+    <section class="col-md-6" style="padding-top: 10px;">
+        <div>
             <div class="card" style="width: 8cm; text-align: center; position: relative; margin-left: 23px;">
             <img src="Images/Yakesma ETB.jpg" class="card-img-top" alt="">
                 <div class="card-body" style="">
@@ -34,7 +35,7 @@
                   </div>
             </div>
         </div>
-        <br>
+    </section>
 <!-- KOLOM TEKS -->
         <section class="col-md-6">
             <h5 style="text-align: justify; font-weight: 800; margin-right: 55px; color: gold; font-size: xx-large; border: 25px ; background-color: rgba(200, 189, 189, 0.1); position: relative; display: inline-block; pointer-events: none;">HALO SEMUANYA</h5> 
@@ -42,6 +43,7 @@
         <div>
             <p style="text-align: justify; margin-top: 15px;">Assalamualaikum</p>
         </div>
+     
 <!-- KOLOM LINK -->
         <div>
             <a href="https://www.yakesmatng.id/p/relawan-yakesma.html" class="btn btn-primary" style="background-color: black; margin-bottom: 5px;">Link Pendaftaran Fully Funded</a> 
@@ -51,6 +53,7 @@
             <br>
          </div>
         </div>
+        </section>
         </section>
       </div>
       </div>
