--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <section class="col-md-6" style="padding-top: 10px;">
                     <div>
                         <div class="card"
-                            style="width: 8cm; text-align: center; position: relative; margin-left: 30px;">
+                            style="width: 8cm; text-align: center; position: relative; margin-left: 27px;">
                             <img src="Images/Yakesma ETB.jpg" class="card-img-top" alt="">
                             <div class="card-body">
                                 <h4 class="card-title" style="font-weight: 650;">EDU TRIP KE KAMPUNG BADUY MUALAF
@@ -50,7 +50,8 @@
                         HALO SEMUANYA</h5>
                     <br>
                     <div>
-                        <p style="text-align: justify; margin-top: 15px;">Assalamualaikum</p>
+                        <p style="text-align: justify; margin-top: 15px;">Assalamualaikum
+                        <br> INI ADALAH FARDHAN</p>
                     </div>
 
                     <!-- KOLOM LINK -->
