--- a/index.html
+++ b/index.html
@@ -46,12 +46,16 @@
                 <!-- KOLOM TEKS -->
                 <section class="col-md-6">
                     <h5
-                        style="text-align: justify; font-weight: 800; margin-right: 55px; color: gold; margin-top: 18px ;font-size: xx-large; border: 25px ; background-color: rgba(200, 189, 189, 0.1); position: relative; display: inline-block; pointer-events: none;">
+                        style="text-align: center; font-weight: 800; margin-right: 55px; color: gold; margin-top: 18px ;font-size: xx-large; border: 25px ; background-color: rgba(200, 189, 189, 0.1); position: relative; display: inline-block; pointer-events: none;">
                         HALO SEMUANYA</h5>
                     <br>
                     <div>
-                        <p style="text-align: justify; margin-top: 15px;">Assalamualaikum
-                        <br> INI ADALAH FARDHAN</p>
+                        <p style="text-align: justify; margin-top: 15px; font-weight: bold;">Assalamualaikum Calon Volunteer
+                        <br> INI ADALAH BENEFIT YANG DIDAPATKAN:</p>
+                        <p style="text-align: justify; margin-top: 5px;">•Fasilitas Pokok Beasiswa Fully Funded. <br>
+                        •Kesempatan optimalisasi dan pengembangan diri. <br>
+                        •Langsung berkesempatan menjadi Member RUN.ID (Jejak Relawan Untuk Indonesia). <br>
+                        •Relasi dan pertemanan serta Sertifikat.</p>
                     </div>
 
                     <!-- KOLOM LINK -->
