--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 
 <body>
-    <h1 style="color: rgb(255, 255, 255); background-color: rgba(58, 223, 8, 0.906); text-align: center;">EDU TRIP BADUY
+    <h1 style="color: rgb(248, 248, 0); background-color: rgb(0, 0, 0, 0.6); text-align: center; border: 2px solid rgb(249, 255, 249);">EDU TRIP BADUY
         YAKESMA KOTA TANGERANG</h1>
 
     <section
         style="background-image: url(Images/logo_opacity.png); background-repeat: no-repeat; background-size: cover; background-position: center;">
         <h3
-            style="font-size: medium; font-weight:600 ;text-align: center; border: 3px solid rgb(7, 208, 7); border-radius: 7px; border-width:4px ; background-color:rgb(251, 251, 37) ;">
+            style="font-size: medium; font-weight:600 ;text-align: center; border: 2px solid rgb(0, 0, 0, 0.2); border-radius: 7px; border-width:4px ; background-color:rgb(251, 251, 37, 0.8) ;  margin-bottom: 15px;">
             Selamat Datang Calon Volunteer di Event EDU TRIP Kampung Baduy Mualaf</h3>
 
 
@@ -29,15 +29,14 @@
                 <section class="col-md-6" style="padding-top: 10px;">
                     <div>
                         <div class="card"
-                            style="width: 8cm; text-align: center; position: relative; margin-left: 34px;">
+                            style="width: 8cm; text-align: center; position: relative; margin-left: 34px; margin-bottom: 10px;">
                             <img src="Images/Yakesma ETB.jpg" class="card-img-top" alt="">
                             <div class="card-body">
-                                <h4 class="card-title" style="font-weight: 650;">EDU TRIP KE KAMPUNG BADUY MUALAF
-                                    bersama KAK EWA</h4>
+                                <h4 class="card-title" style="font-weight: 650;">EDU TRIP KAMPUNG BADUY MUALAF</h4>
                                 <p class="card-text" style="font:caption;"> AYO GABUNG DI EVENT EDU TRIP KAMPUNG BADUY
-                                    MUALAF</p>
+                                    MUALAF bareng KAK EWA</p>
                                 <a href="https://www.instagram.com/p/C-HvY_lS5GS/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
-                                    class="btn btn-primary" style="background-color: rgb(7, 208, 7);">DAFTAR
+                                    class="btn btn-primary" style="">DAFTAR
                                     SEKARANG</a>
                             </div>
                         </div>
@@ -46,33 +45,42 @@
                 <!-- KOLOM TEKS -->
                 <section class="col-md-6">
                     <h5
-                        style="text-align: center; font-weight: 800; margin-right: 55px; color: gold; margin-top: 18px ;font-size: xx-large; border: 25px ; background-color: rgba(200, 189, 189, 0.1); position: relative; display: inline-block; pointer-events: none;">
-                        HALO SEMUANYA</h5>
-                    <br>
+                        style="text-align: center; font-weight: 800; margin-right: 55px; color: gold; margin-top: 2px ;font-size: xx-large; border: 2px solid rgba(200, 189, 189, 0.1); background-color: rgba(200, 189, 189, 0.1); position: relative; display: inline-block; pointer-events: none;">
+                        HALO SEMUANYA </h5>
+                        <div>
+                            <p style="text-align: justify; background-color: rgba(201, 200, 200, 0.3); border: 2px solid rgba(201, 200, 200, 0.3);">Assalamualaikum Calon Volunteer. <br> Kita mau bikin acara penggalangan dana sekaligus cultural trip ke Kampung Baduy Mualaf bareng Kak Ewa. </p>
                     <div>
-                        <p style="text-align: justify; margin-top: 15px; font-weight: bold;">Assalamualaikum Calon Volunteer
-                        <br> INI ADALAH BENEFIT YANG DIDAPATKAN:</p>
-                        <p style="text-align: justify; margin-top: 5px;">•Fasilitas Pokok Beasiswa Fully Funded. <br>
+                        <p style="text-align: justify; margin-top: 2px; font-weight: bold;"> INI ADALAH BENEFIT YANG DIDAPATKAN:</p>
+                        <p style="text-align: justify; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); position: relative; display: inline-block; pointer-events: none;">•Fasilitas Pokok Umum dan Beasiswa Fully Funded. <br>
                         •Kesempatan optimalisasi dan pengembangan diri. <br>
                         •Langsung berkesempatan menjadi Member RUN.ID (Jejak Relawan Untuk Indonesia). <br>
                         •Relasi dan pertemanan serta Sertifikat.</p>
                     </div>
-
-                    <!-- KOLOM LINK -->
+ 
                     <div>
+                        <h5 style="text-align: center; margin-top: 1px; font-weight: 800; color: gold; font-size: x-large; border: 2px solid rgba(200, 189, 189, 0.1); background-color: rgba(200, 189, 189, 0.1);"> APA AJA NIH KEGIATANNYA</h5>
+                        <p style="text-align: left; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); ">☆ Pelatihan Kerelawanan Dasar. <br>
+                        ☆ Photography session bareng Kak Ewa, main games dan Traveling bareng! <br>
+                        ☆ Socio adventure di Kampung Mualaf Baduy Lebak Banten. <br>
+                        ☆ Cultural Adventure di Kampung Baduy Luar dan Dalam.</p>
+                    </div>
+                    <!-- KOLOM LINK -->
+                    <section class="container mt-5">
+                    <div class="d-flex">
                         <a href="https://www.yakesmatng.id/p/relawan-yakesma.html" class="btn btn-primary"
-                            style="background-color: black; margin-bottom: 5px;">Link Pendaftaran Fully Funded</a>
+                            style="background-color: black; margin-bottom: 3px;">Link Pendaftaran RUN.ID</a>
                         <br>
                         <div>
                             <a href="https://api.whatsapp.com/send/?phone=6282111920101&text&type=phone_number&app_absent=0"
-                                class="btn btn-primary" style="background-color: yellow; margin-top: 5px; color: black">
+                                class="btn btn-primary" style="background-color: rgb(7, 208, 7); margin-bottom: 3px; margin-left: 14px ; color: black">
                                 Nomor Whatsapp Konfirmasi</a>
                             <br>
                         </div>
                     </div>
+                    </section>
                 </section>
-    </section>
-    </div>
+            </section>
+        </div>
     </div>
     </section>
     </section>
