--- a/index.html
+++ b/index.html
@@ -42,13 +42,18 @@
                         </div>
                     </div>
                 </section>
-                <!-- KOLOM TEKS -->
                 <section class="col-md-6">
+                    <div>
+                        <img src="Images/ribbon-removebg-preview.png" alt="" style="width: 19rem; margin-top: 9px;">
+                    </div>
+               
+                <!-- KOLOM TEKS -->
+                <section>
                     <h5
                         style="text-align: center; font-weight: 800; margin-right: 55px; color: gold; margin-top: 16px ;font-size: xx-large; border: 2px solid rgba(200, 189, 189, 0.2); background-color: rgba(200, 189, 189, 0.3); position: relative; display: inline-block; pointer-events: none;">
                         HALO SEMUANYA </h5>
                         <div>
-                            <p style="text-align: justify; background-color: rgba(201, 200, 200, 0.6); border: 2px solid rgba(201, 200, 200, 0.6);">Assalamualaikum Calon Volunteer. <br> Kita mau bikin acara penggalangan dana sekaligus cultural trip ke Kampung Baduy Mualaf bareng Kak Ewa. </p>
+                            <p style="text-align: justify; background-color: rgba(201, 200, 200, 0.3); border: 2px solid rgba(201, 200, 200, 0.3);">Assalamualaikum Calon Volunteer. <br> Kita mau bikin acara penggalangan dana sekaligus cultural trip ke Kampung Baduy Mualaf bareng Kak Ewa. </p>
                     <div>
                         <p style="text-align: justify; margin-top: 2px; font-weight: bold;"> INI ADALAH BENEFIT YANG DIDAPATKAN:</p>
                         <p style="text-align: justify; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); position: relative; display: inline-block; pointer-events: none;">•Fasilitas Pokok Umum dan Beasiswa Fully Funded. <br>
@@ -82,6 +87,7 @@
             </section>
         </div>
     </div>
+    </section>
     </section>
     </section>
     <!-- KOLOM COUNTDOWN -->
