--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div>
                         <div class="card"
                             style="width: 8cm; text-align: center; position: relative; margin-left: 34px; margin-bottom: 10px;">
-                            <img src="Images/Yakesma ETB.jpg" class="card-img-top" alt="">
+                            <img src="Images/Yakesma ETB.jpg" class="card-img-top" alt="#">
                             <div class="card-body">
                                 <h4 class="card-title" style="font-weight: 650;">EDU TRIP KAMPUNG BADUY MUALAF</h4>
                                 <p class="card-text" style="font:caption;"> AYO GABUNG DI EVENT EDU TRIP KAMPUNG BADUY
@@ -44,7 +44,9 @@
                 </section>
                 <section class="col-md-6">
                     <div>
-                        <img src="Images/ribbon-removebg-preview.png" alt="" style="width: 19rem; margin-top: 9px;">
+                        <img src="Images/ribbon-removebg-preview.png" alt="" class="centered-image img-fluid" style="width: 19rem; margin-top: 9px; display: block;
+            margin-left: auto;
+            margin-right: auto;">
                     </div>
                
                 <!-- KOLOM TEKS -->
