--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </section>
                 <section class="col-md-6">
                     <div>
-                        <img src="Images/ribbon-removebg-preview.png" alt="" class="centered-image img-fluid" style="width: 19rem; margin-top: 9px; display: block;
+                        <img src="Images/ribbonaj" alt="" class="centered-image img-fluid" style="width: 19rem; margin-top: 9px; display: block;
             margin-left: auto;
             margin-right: auto;">
                     </div>
