--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                         </div>
                     </div>
                 </section>
+                <!-- KOLOM RIBBON -->
                 <section class="col-md-6">
                     <div>
                         <img src="Images/ribbonaj" alt="" class="centered-image img-fluid" style="width: 19rem; margin-top: 9px; display: block;
