--- a/index.html
+++ b/index.html
@@ -17,11 +17,35 @@
 
     <section
         style="background-image: url(Images/logo_opacity.png); background-repeat: no-repeat; background-size: cover; background-position: center;">
-        <h3
-            style="font-size: medium; font-weight:600 ;text-align: center; border: 2px solid rgb(0, 0, 0, 0.2); border-radius: 7px; border-width:4px ; background-color:rgb(251, 251, 37, 0.8) ;  margin-bottom: 15px;">
+       <div>
+        <h3 style="font-size: medium; font-weight:600 ;text-align: center; border: 2px solid rgb(0, 0, 0, 0.2); border-radius: 7px; border-width:4px ; background-color:rgb(251, 251, 37, 0.8) ;  margin-bottom: 15px;">
             Selamat Datang Calon Volunteer di Event EDU TRIP Kampung Baduy Mualaf</h3>
+        </div>
 
-
+                            <section class="">
+                                <div class="d-flex">
+                                <div>
+                                    <button class="btn btn-primary">
+                                        <a href="L">
+                                        <img src="Images/Refresh.png" alt="" style="width: 20px; height: 20px; margin-right: 5px;">
+                                        </a>
+                                    </button>
+                                </div>
+                                 <div>
+                                        <a href="https://api.whatsapp.com/send/?phone=6282111920101&text&type=phone_number&app_absent=0"
+                                            class="btn btn-primary"
+                                            style="background-color: rgb(7, 208, 7); margin-bottom: 3px; margin-left: 325px ; color: black">
+                                            Nomor Whatsapp Konfirmasi</a>
+                                        <br>
+                                 </div>
+                                    <div>
+                                            
+                                         <a href="https://www.yakesmatng.id/p/relawan-yakesma.html" class="btn btn-primary"
+                                                style="background-color: black; margin-bottom: 3px; margin-left: 14px;">Link Pendaftaran RUN.ID</a>
+                                         <br>
+                                    </div>
+                                </div>
+                                
         <div class="container mt-5">
             <div class="row">
 
@@ -45,7 +69,7 @@
                 <!-- KOLOM RIBBON -->
                 <section class="col-md-6">
                     <div>
-                          <img src="Images/ribbonaj.png" alt="" class="centered-image img-fluid" style="width: 23rem; margin-top: 9px; display: block;
+                        <img src="Images/ribbonaj.png" alt="" class="centered-image img-fluid" style="width: 23rem; margin-top: 9px; display: block;
             margin-left: auto;
             margin-right: auto;">
                     </div>
@@ -53,43 +77,39 @@
                 <!-- KOLOM TEKS -->
                 <section>
                     <h5
-                        style="text-align: center; font-weight: 800; margin-right: 55px; color: gold; margin-top: 16px ;font-size: xx-large; border: 2px solid rgba(200, 189, 189, 0.2); background-color: rgba(200, 189, 189, 0.3); position: relative; display: inline-block; pointer-events: none;">
+                        style="text-align: center; font-weight: 800; margin-right: 15px; margin-left: 15px ; color: gold; margin-top: 15px ;font-size: xx-large; border: 2px solid rgba(200, 189, 189, 0.2); background-color: rgba(200, 189, 189, 0.3);">
                         HALO SEMUANYA </h5>
                         <div>
                             <p style="text-align: justify; background-color: rgba(201, 200, 200, 0.3); border: 2px solid rgba(201, 200, 200, 0.3);">Assalamualaikum Calon Volunteer. <br> Kita mau bikin acara penggalangan dana sekaligus cultural trip ke Kampung Baduy Mualaf bareng Kak Ewa. </p>
                     <div>
-                        <p style="text-align: justify; margin-top: 2px; font-weight: bold;"> INI ADALAH BENEFIT YANG DIDAPATKAN:</p>
-                        <p style="text-align: justify; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); position: relative; display: inline-block; pointer-events: none;">•Fasilitas Pokok Umum dan Beasiswa Fully Funded. <br>
-                        •Kesempatan optimalisasi dan pengembangan diri. <br>
-                        •Langsung berkesempatan menjadi Member RUN.ID (Jejak Relawan Untuk Indonesia). <br>
-                        •Relasi dan pertemanan serta Sertifikat.</p>
+                        <h5 style="text-align: center; margin-top: 2px; font-weight: bold; color: gold; font-size: x-large; border: 2px solid rgba(200, 189, 189, 0.1); background-color: rgba(200, 189, 189, 0.1);">DAPAT BENEFIT APA?</h5>
+                        <h4 style="text-align: left; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); position: relative; display: inline-block; pointer-events: none; font-weight: bold; font-size: medium;">• Fasilitas Pokok Umum dan Beasiswa Fully Funded. <br>
+                        • Kesempatan optimalisasi dan pengembangan diri. <br>
+                        • Berkesempatan menjadi Member RUN.ID <br> (Jejak Relawan Untuk Indonesia). <br>
+                        • Relasi dan pertemanan serta Sertifikat.</h4>
                     </div>
  
                     <div>
-                        <h5 style="text-align: center; margin-top: 1px; font-weight: 800; color: gold; font-size: x-large; border: 2px solid rgba(200, 189, 189, 0.1); background-color: rgba(200, 189, 189, 0.1);"> APA AJA NIH KEGIATANNYA</h5>
-                        <p style="text-align: left; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); ">☆ Pelatihan Kerelawanan Dasar. <br>
+                        <h5 style="text-align: center; margin-top: 2px; font-weight: 800; color: gold; font-size: x-large; border: 2px solid rgba(200, 189, 189, 0.1); background-color: rgba(200, 189, 189, 0.1);"> APA AJA NIH KEGIATANNYA</h5>
+                        <h4 style="text-align: left; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); font-weight: bold; font-size: medium;">☆ Pelatihan Kerelawanan Dasar. <br>
                         ☆ Photography session bareng Kak Ewa, main games dan Traveling bareng! <br>
                         ☆ Socio adventure di Kampung Mualaf Baduy Lebak Banten. <br>
-                        ☆ Cultural Adventure di Kampung Baduy Luar dan Dalam.</p>
+                        ☆ Cultural Adventure di Kampung Baduy Luar dan Dalam.</h4>
+                    </div>
+                        <h5
+                            style="text-align: center; margin-top: 2px; font-weight: 800; color: gold; font-size: x-large; border: 2px solid rgba(200, 189, 189, 0.1); background-color: rgba(200, 189, 189, 0.1);">AGENDA PERJALANAN
+                        </h5>
+                        <h4 style="text-align: left; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); font-weight: bold; font-size: medium;"> koko
+                        </h4>
+                    <div>
+
                     </div>
                     <!-- KOLOM LINK -->
-                    <section class="container mt-5">
-                    <div class="d-flex">
-                        <a href="https://www.yakesmatng.id/p/relawan-yakesma.html" class="btn btn-primary"
-                            style="background-color: black; margin-bottom: 3px;">Link Pendaftaran RUN.ID</a>
-                        <br>
-                        <div>
-                            <a href="https://api.whatsapp.com/send/?phone=6282111920101&text&type=phone_number&app_absent=0"
-                                class="btn btn-primary" style="background-color: rgb(7, 208, 7); margin-bottom: 3px; margin-left: 14px ; color: black">
-                                Nomor Whatsapp Konfirmasi</a>
-                            <br>
-                        </div>
-                    </div>
+
+                  </div>
                     </section>
                 </section>
             </section>
-        </div>
-    </div>
     </section>
     </section>
     </section>
