--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             Selamat Datang Calon Volunteer di Event EDU TRIP Kampung Baduy Mualaf</h3>
         </div>
 
-                            <section class="">
+                            <section class="bg-success" style="background-image: url();">
                                 <div class="d-flex">
                                 <div>
-                                    <button class="btn btn-primary">
-                                        <a href="L">
+                                    <button class="btn btn-primary" style="margin-left: 15px; margin-bottom: 1px; background-color: rgb(39, 242, 45);">
+                                        <a href="https://leikaze.github.io/YakesmaTNG_ETB/">
                                         <img src="Images/Refresh.png" alt="" style="width: 20px; height: 20px; margin-right: 5px;">
                                         </a>
                                     </button>
@@ -34,18 +34,18 @@
                                  <div>
                                         <a href="https://api.whatsapp.com/send/?phone=6282111920101&text&type=phone_number&app_absent=0"
                                             class="btn btn-primary"
-                                            style="background-color: rgb(7, 208, 7); margin-bottom: 3px; margin-left: 325px ; color: black">
+                                            style="background-color: rgb(255, 255, 255); margin-top: 1px; margin-left: 265px ; color: black">
                                             Nomor Whatsapp Konfirmasi</a>
                                         <br>
                                  </div>
                                     <div>
                                             
                                          <a href="https://www.yakesmatng.id/p/relawan-yakesma.html" class="btn btn-primary"
-                                                style="background-color: black; margin-bottom: 3px; margin-left: 14px;">Link Pendaftaran RUN.ID</a>
+                                                style="background-color: rgb(255, 255, 255); margin-top: 1px; margin-left: 14px; color: black;">Link Pendaftaran RUN.ID</a>
                                          <br>
                                     </div>
                                 </div>
-                                
+                                </section>
         <div class="container mt-5">
             <div class="row">
 
@@ -107,7 +107,6 @@
                     <!-- KOLOM LINK -->
 
                   </div>
-                    </section>
                 </section>
             </section>
     </section>
