--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <section class="col-md-6" style="padding-top: 10px;">
                     <div>
                         <div class="card"
-                            style="width: 8cm; text-align: center; position: relative; margin-left: 34px; margin-top: 15px;">
+                            style="width: 8cm; text-align: center; position: relative; margin-left: 39px; margin-top: 15px;">
                             <img src="Images/Yakesma ETB.jpg" class="card-img-top" alt="#">
                             <div class="card-body">
                                 <h4 class="card-title" style="font-weight: 650;">EDU TRIP KAMPUNG BADUY MUALAF</h4>
@@ -115,7 +115,7 @@
             </section>
             <section>
             <div>
-                <img src="Images/kelas.jpeg" alt="" style="width: 45rem; display: block; margin: auto; align-items: center;">
+                <img src="Images/kelas.jpeg" alt="" style="width: 27rem; height: 8vh ; display: block; margin: auto; align-items: center;">
             </div>
             <div>
                 <h5
@@ -147,4 +147,3 @@
 </footer>
 
 </html>
-                
