--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                             <div>
                                             <li class="nav-item">
-                                                <a class="nav-link active" href="https://www.yakesmatng.id" style="font-weight: bold ; margin-left: 13px" >BERANDA</a>
+                                                <a class="nav-link active" href="https://www.yakesmatng.id" style="font-weight: bold ; margin-left: 14px" >BERANDA</a>
                                             </li>
 
                                             <li class="nav-item">
@@ -50,7 +50,7 @@
                                                 <div>
                                                     <a href="https://api.whatsapp.com/send/?phone=6282111920101&text&type=phone_number&app_absent=0" class="btn btn"
                                                         style=" margin-top: 1px; margin-left: 3px ; color: black; font-weight: bold;">
-                                                        NOMOR WHATSAPP KONFIRMASI (082111920101)</a>
+                                                        NOMOR WHATSAPP KONFIRMASI</a>
                                                 </div>
                                             </li>
                                           
