--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
                                             <li class="nav-item">
                                                   <div>
                                                     <a href="https://www.yakesmatng.id/p/relawan-yakesma.html" class="btn btn"
-                                                    style="margin-top: 1px; margin-left: 3px; color: black; font-weight: bold;">LINK PENDAFTARAN
+                                                    style="margin-top: 1px; margin-left: 10px; color: black; font-weight: bold;">LINK PENDAFTARAN
                                                      RUN.ID</a>
                                                   </div>
                                                 <div>
                                                     <a href="https://api.whatsapp.com/send/?phone=6282111920101&text&type=phone_number&app_absent=0" class="btn btn"
-                                                        style=" margin-top: 1px; margin-left: 3px ; color: black; font-weight: bold;">
+                                                        style=" margin-top: 1px; margin-left: 9px ; color: black; font-weight: bold;">
                                                         NOMOR WHATSAPP KONFIRMASI</a>
                                                 </div>
                                             </li>
@@ -66,7 +66,7 @@
                 <section class="col-md-6" style="padding-top: 10px;">
                     <div>
                         <div class="card"
-                            style="width: 8cm; text-align: center; position: relative; margin-left: 39px; margin-top: 15px;">
+                            style="width: 8cm; text-align: center; position: relative; margin-left: 40px; margin-top: 15px;">
                             <img src="Images/Yakesma ETB.jpg" class="card-img-top" alt="#">
                             <div class="card-body">
                                 <h4 class="card-title" style="font-weight: 650;">EDU TRIP KAMPUNG BADUY MUALAF</h4>
@@ -96,7 +96,7 @@
                             <p style="text-align: justify; background-color: rgba(201, 200, 200, 0.3); border: 2px solid rgba(201, 200, 200, 0.3);">Assalamualaikum Calon Volunteer. <br> Kita mau bikin acara penggalangan dana sekaligus cultural trip ke Kampung Baduy Mualaf bareng Kak Ewa. </p>
                     <div>
                         <h5 style="text-align: center; margin-top: 2px; font-weight: bold; color: gold; font-size: x-large; border: 2px solid rgba(200, 189, 189, 0.1); background-color: rgba(200, 189, 189, 0.1);">DAPAT BENEFIT APA?</h5>
-                        <h4 style="text-align: left; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); position: relative; display: inline-block; pointer-events: none; font-weight: bold; font-size: medium;">• Fasilitas Pokok Umum dan Beasiswa Fully Funded. <br>
+                        <h4 style="text-align: left; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); display: block; pointer-events: none; font-weight: bold; font-size: medium; align-items: center;">• Fasilitas Pokok Umum dan Beasiswa Fully Funded. <br>
                         • Kesempatan optimalisasi dan pengembangan diri. <br>
                         • Berkesempatan menjadi Member RUN.ID <br> (Jejak Relawan Untuk Indonesia). <br>
                         • Relasi dan pertemanan serta Sertifikat.</h4>
@@ -109,24 +109,23 @@
                         ☆ Socio adventure di Kampung Mualaf Baduy Lebak Banten. <br>
                         ☆ Cultural Adventure di Kampung Baduy Luar dan Dalam.</h4>
                     </div>
+                    <div>
+                        <h5
+                            style="text-align: center; margin-top: 8px; font-weight: 800; color: gold; font-size: x-large; border: 2px solid rgba(200, 189, 189, 0.1); background-color: rgba(200, 189, 189, 0.1);">
+                            AGENDA PERJALANAN
+                        </h5>
+                        <h4
+                            style="text-align: left; margin-top: 3px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); font-weight: bold; font-size: medium;">
+                            UNDER CONSTRUCTION
+                        </h4>
+
+                        <img src="Images/kelas_2.jpeg" alt=""
+                            style="width: 24.8rem; height: 6vh ; display: block; margin: auto; align-items: center; margin-bottom: px ;">
+                    </div>
+
                   </div>
                 </div>
                 </section>
-            </section>
-            <section>
-            <div>
-                <img src="Images/kelas_2.jpeg" alt="" style="width: 25rem; height: 6vh ; display: block; margin: auto; align-items: center;">
-            </div>
-            <div>
-                <h5
-                    style="text-align: center; margin-top: 5px; font-weight: 800; color: gold; font-size: x-large; border: 2px solid rgba(200, 189, 189, 0.1); background-color: rgba(200, 189, 189, 0.1);">
-                    AGENDA PERJALANAN
-                </h5>
-                <h4
-                    style="text-align: left; margin-top: 3px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); font-weight: bold; font-size: medium;">
-                    UNDER CONSTRUCTION
-                </h4>
-            </div>
             </section>
     <!-- KOLOM COUNTDOWN -->
     <section style="padding-top: 15px;">
@@ -147,3 +146,4 @@
 </footer>
 
 </html>
+                
