--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         </h4>
 
                         <img src="Images/kelas_2.jpeg" alt=""
-                            style="width: 24.8rem; height: 6vh ; display: block; margin: auto; align-items: center; margin-bottom: px ;">
+                            style="width: 22rem; height: 6vh ; display: block; margin: auto; align-items: center;">
                     </div>
 
                   </div>
@@ -146,4 +146,3 @@
 </footer>
 
 </html>
-                
