--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
                                             <li class="nav-item">
                                                   <div>
-                                                    <a href="https://www.yakesmatng.id/p/relawan-yakesma.html" class="btn btn"
-                                                    style="margin-top: 1px; margin-left: 6px; color: black; font-weight: bold;">LINK PENDAFTARAN
+                                                    <a href="https://www.yakesmatng.id/p/relawan-yakesma.html" class="btn"
+                                                    style="margin-top: 1px; margin-left: 7px; color: black; font-weight: bold;">LINK PENDAFTARAN
                                                      RUN.ID</a>
                                                   </div>
                                                 <div>
@@ -60,6 +60,7 @@
                                 </div>
                             </nav>
                                 </section>
+
         <div class="container mt-5">
             <div class="row">
                 <!-- KOLOM KARTU -->
@@ -96,7 +97,7 @@
                             <p style="text-align: justify; background-color: rgba(201, 200, 200, 0.3); border: 2px solid rgba(201, 200, 200, 0.3);">Assalamualaikum Calon Volunteer. <br> Kita mau bikin acara penggalangan dana sekaligus cultural trip ke Kampung Baduy Mualaf bareng Kak Ewa. </p>
                     <div>
                         <h5 style="text-align: center; margin-top: 2px; font-weight: bold; color: gold; font-size: x-large; border: 2px solid rgba(200, 189, 189, 0.1); background-color: rgba(200, 189, 189, 0.1);">DAPAT BENEFIT APA?</h5>
-                        <h4 style="text-align: left; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); display: block; pointer-events: none; font-weight: bold; font-size: medium; align-items: center;">• Fasilitas Pokok Umum dan Beasiswa Fully Funded. <br>
+                        <h4 style="text-align: left; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); display: block; pointer-events: none; align-items: center; font-weight: bold; font-size: medium;">• Fasilitas Pokok Umum dan Beasiswa Fully Funded. <br>
                         • Kesempatan optimalisasi dan pengembangan diri. <br>
                         • Berkesempatan menjadi Member RUN.ID <br> (Jejak Relawan Untuk Indonesia). <br>
                         • Relasi dan pertemanan serta Sertifikat.</h4>
@@ -118,14 +119,33 @@
                             style="text-align: left; margin-top: 3px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); font-weight: bold; font-size: medium;">
                             UNDER CONSTRUCTION
                         </h4>
-
-                        <img src="Images/kelas_2.jpeg" alt=""
-                            style="width: 23.5rem; height: 6vh ; display: block; margin: auto; align-items: center;">
                     </div>
-
+                   
                   </div>
                 </div>
                 </section>
+            </section>
+            <section>
+                <div>
+                    <img src="Images/kelas_2.jpeg" alt=""
+                        style="width: 23.5rem; height: 6vh ; display: block; margin: auto; align-items: center;">
+
+                    <h5
+                        style="text-align: center; margin-top: 8px; font-weight: 800; color: gold; font-size: x-large; border: 2px solid rgba(200, 189, 189, 0.1); background-color: rgba(200, 189, 189, 0.1);">
+                        SYARAT PESERTA</h5>
+                    <h4
+                        style="text-align: left; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); font-weight: bold; font-size: medium; display: block; pointer-events: none; align-items: center;">
+                        UNDER CONSTRUCTION</h4>
+                </div>
+
+                <div>
+                <h5
+                    style="text-align: center; margin-top: 8px; font-weight: 800; color: gold; font-size: x-large; border: 2px solid rgba(200, 189, 189, 0.1); background-color: rgba(200, 189, 189, 0.1);">
+                    TIMELINE KEGIATAN</h5>
+                <h4
+                    style="text-align: left; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); font-weight: bold; font-size: medium; display: block; pointer-events: none; align-items: center;">
+                    UNDER CONSTRUCTION</h4>
+                </div>
             </section>
     <!-- KOLOM COUNTDOWN -->
     <section style="padding-top: 15px;">
@@ -146,4 +166,3 @@
 </footer>
 
 </html>
-                
