--- a/index.html
+++ b/index.html
@@ -149,10 +149,12 @@
             </section>
     <!-- KOLOM COUNTDOWN -->
     <section style="padding-top: 15px;">
-        <div id="time"></div>
-
-        <script src="time.js">Countdown</script>
-
+    <div style="height: 1500px; align-items:end;">
+    
+    <button id="backToTop" onclick="scrollToTop()">Kembali ke Atas</button>
+    
+    <script src="scroll.js"></script>
+    </div>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
