--- a/index.html
+++ b/index.html
@@ -139,19 +139,28 @@
                 </div>
 
                 <div>
-                <h5
+                    <h5
                     style="text-align: center; margin-top: 8px; font-weight: 800; color: gold; font-size: x-large; border: 2px solid rgba(200, 189, 189, 0.1); background-color: rgba(200, 189, 189, 0.1);">
                     TIMELINE KEGIATAN</h5>
-                <h4
+                    <h4
                     style="text-align: left; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); font-weight: bold; font-size: medium; display: block; pointer-events: none; align-items: center;">
                     UNDER CONSTRUCTION</h4>
                 </div>
+
+                <div>
+                    <h5
+                        style="text-align: center; margin-top: 8px; font-weight: 800; color: gold; font-size: x-large; border: 2px solid rgba(200, 189, 189, 0.1); background-color: rgba(200, 189, 189, 0.1);">
+                        TATA CARA PENDAFTARAN FULLY FUNDED</h5>
+                    <h4
+                        style="text-align: left; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); font-weight: bold; font-size: medium; display: block; pointer-events: none; align-items: center;">
+                        UNDER CONSTRUCTION</h4>
+                </div>
             </section>
-    <!-- KOLOM COUNTDOWN -->
-    <section style="padding-top: 15px;">
-    <div style="height: 1500px; align-items:end;">
+    <!-- KOLOM SCROLL -->
+    <section class="container" style="padding-top: 15px;">
+    <div style="height: auto; display: flex; justify-content: flex-end; margin-left: 10px; ">
     
-    <button id="backToTop" onclick="scrollToTop()">Kembali ke Atas</button>
+    <button id="backToTop" onclick="scrollToTop()" style="padding: 2px; border-radius: 5px;" class="bg-primary">Kembali ke Atas</button>
     
     <script src="scroll.js"></script>
     </div>
