--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <div>
                     <h5
                         style="text-align: center; margin-top: 8px; font-weight: 800; color: gold; font-size: x-large; border: 2px solid rgba(200, 189, 189, 0.1); background-color: rgba(200, 189, 189, 0.1);">
-                        TATA CARA PENDAFTARAN FULLY FUNDED</h5>
+                        TATA CARA PENDAFTARAN <br> FULLY FUNDED</h5>
                     <h4
                         style="text-align: left; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); font-weight: bold; font-size: medium; display: block; pointer-events: none; align-items: center;">
                         UNDER CONSTRUCTION</h4>
