--- a/index.html
+++ b/index.html
@@ -146,17 +146,34 @@
                     <h5
                         style="text-align: center; margin-top: 8px; font-weight: 800; color: gold; font-size: x-large; border: 2px solid rgba(200, 189, 189, 0.1); background-color: rgba(200, 189, 189, 0.1);">
                         SYARAT PESERTA</h5>
+                        <div style="border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3);">
                     <h4
-                        style="text-align: center; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); font-weight: bold; font-size: medium; display: block; pointer-events: none; align-items: center;">
-                        PESERTA UMUM <br>
-                        <dir style="text-align: left;">
-                    <p>1. Kegiatan SocioTrip terbuka untuk masyarakat umum lintas <br> disiplin ilmu dengan batasan usia minimal 15 tahun. <br> </p>
-                    <p>2. Memiliki kemauan dan semangat untuk mengabdi serta <br> mengembangkan potensi lokal daerah  dan loyalitas yang tinggi. <br> </p>
-                    <p>3. Sehat jasmani dan Rohani. <br></p>
-                    <p>4. Taat terhadap Pancasila dan UUD 45.</p>
-                    <p>5. Mengumpulkan berkas administrative.</p>
-                       </dir>
-                   </h4>
+                        style="text-align: center; margin-top: 2px; font-weight: bold; font-size: larger; color: rgb(39, 242, 45, 0.8) ; display: block; pointer-events: none; align-items: center;">
+                        PESERTA UMUM <br> </h4>
+                    <p style="font-size: medium; text-align: justify; margin-top: 1px; margin-left: 10px; color: rgb(0, 0, 0); font-weight: bold; ">1. Kegiatan SocioTrip terbuka untuk masyarakat umum lintas <br> disiplin ilmu dengan batasan usia minimal 15 tahun. <br> <br>
+                       2. Memiliki kemauan dan semangat untuk mengabdi serta <br> mengembangkan potensi lokal daerah  dan loyalitas yang tinggi. <br> <br>
+                       3. Sehat secara Jasmani dan Rohani. <br><br>
+                       4. Taat terhadap Pancasila dan UUD 45. <br> <br>
+                       5. Mengumpulkan berkas administratif.</p>
+                    <h4 style="text-align: center; margin-top: 2px; font-weight: bold; font-size: larger; color: rgb(39, 242, 45, 0.8) ; display: block; pointer-events: none; align-items: center;">PESERTA FULLY FUNDED</h4>
+                    
+                    <p style="font-size: medium; text-align: justify; margin-top: 1px; color: rgb(0, 0, 0); font-weight: bold; margin-left: 10px;">1.	WNI berdomisili atau beralamat KTP Kota Tangerang. <br> <br>
+2.	Muslim atau Muslimah usia 18 sampai 35 tahun. <br> <br>
+3.	Bisa membaca dan memahami Al-Quran. <br> <br>
+4.	Diutamakan hafal juz 30. <br><br>
+5.	Tidak merokok, tidak bertato dan tidak bertindik (kecuali anting untuk perempuan). <br> <br>
+6.	Siap menjadi member RUN Indonesia dan berkhidmat <br> di Yakesma Kota Tangerang sesuai jangka kontrak program. <br> <br>
+7.	Sanggup mematuhi aturan program utama. <br> <br>
+8.	Mendaftarkan diri dan lolos seleksi pendaftaran program. <br><br>
+9. Mengumpulkan berkas-berkas administratif sebagai berikut: <br>
+- Mengisi Formulir online RUN.ID <br>
+- Formulir Pernyataan Pendaftaran seleksi Fully Funded. <br>
+- Formulir Pendaftaran Anggota RUN.ID <br>
+- FC KTP / KK.<br>
+- FC Sertifikat hafalan quran ( jika ada).
+
+</p>
+                  </div>
                 </div>
 
                 <div>
@@ -166,6 +183,15 @@
                     <h4
                     style="text-align: left; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); font-weight: bold; font-size: medium; display: block; pointer-events: none; align-items: center;">
                     UNDER CONSTRUCTION</h4>
+                </div>
+
+                <div>
+                    <h5
+                        style="text-align: center; margin-top: 8px; font-weight: 800; color: gold; font-size: x-large; border: 2px solid rgba(200, 189, 189, 0.1); background-color: rgba(200, 189, 189, 0.1);">
+                        DONASI UNTUK ANAK MUALAF</h5>
+                    <h4
+                        style="text-align: left; margin-top: 2px; border: 2px solid rgba(201, 200, 200, 0.3); background-color: rgb(201, 200, 200, 0.3); font-weight: bold; font-size: medium; display: block; pointer-events: none; align-items: center;">
+                        UNDER CONSTRUCTION</h4>
                 </div>
 
                 <div>
